# hudl-advent-of-code

./: .copier-answers.yml  .gitignore  README.md  buildspec.yaml  pyproject.toml  ruff.toml
.devcontainer/: bash_env.sh  devcontainer.json  devcontainer_postattach.sh  devcontainer_postcreate.sh  devcontainer_poststart.sh
.pymarvel/: build_tokens.sh  convert_poetry_to_uv.sh  install_oh_my_bash.sh  log_devcontainer_event.sh
advent_of_code/: runner.py  scaffold.py
advent_of_code/year_2025/: __init__.py
advent_of_code/year_2025/day_01/: CHALLENGE.md  __init__.py  solution.py
advent_of_code/year_2025/day_02/: CHALLENGE.md  input.txt  solution.py  test_input.txt
advent_of_code/year_2025/day_03/: CHALLENGE.md  solution.py
advent_of_code/year_2025/day_04/: CHALLENGE.md  solution.py
advent_of_code/year_2025/day_05/: CHALLENGE.md  __init__.py  solution.py
advent_of_code/year_2025/day_06/: CHALLENGE.md  solution.py
